--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
 }
 
 .btn{
